force-app/main/default/objects/Student__c/fields/Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Rating__c</fullName>
    <formula>IF( Totoal_No_of_ratings__c &lt; 1, 0, Sum_of_all_ratings__c  /  Totoal_No_of_ratings__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>