force-app/main/default/objects/Student__c/fields/Currently_Working_at__c.field-meta.xml
<CustomField>
    <fullName>Currently_Working_at__c</fullName>
    <label>Currently Working at</label>
    <length>90</length>
    <type>Text</type>
</CustomField>