force-app/main/default/objects/Student__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <inlineHelpText>Date of Birth</inlineHelpText>
    <label>DOB</label>
    <type>Date</type>
</CustomField>