force-app/main/default/objects/Student__c/fields/Fee_Deposited__c.field-meta.xml
<CustomField>
    <fullName>Fee_Deposited__c</fullName>
    <label>Fee Deposited</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>