force-app/main/default/objects/Student__c/fields/Remaining_Fees__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Fees__c</fullName>
    <formula>52000 -  Fee_Deposited__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>