force-app/main/default/objects/Student__c/fields/Sum_of_all_ratings__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_all_ratings__c</fullName>
    <label>Sum of all ratings</label>
    <summarizedField>Rating__c.Rating_Out_of_10__c</summarizedField>
    <summaryForeignKey>Rating__c.Rating_given_to_which_student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>