force-app/main/default/objects/Student__c/fields/Technology_Domain_Working__c.field-meta.xml
<CustomField>
    <fullName>Technology_Domain_Working__c</fullName>
    <label>Technology / Domain Working</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>DSA</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>