force-app/main/default/objects/Student__c/fields/Totoal_No_of_ratings__c.field-meta.xml
<CustomField>
    <fullName>Totoal_No_of_ratings__c</fullName>
    <label>Totoal No. of ratings</label>
    <summaryForeignKey>Rating__c.Rating_given_to_which_student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>