force-app/main/default/objects/Student__c/fields/X12th_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X12th_Percentage__c</fullName>
    <label>12th Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>