force-app/main/default/objects/Student__c/fields/Years_of_experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_experience__c</fullName>
    <label>Years of experience</label>
    <length>90</length>
    <type>Text</type>
</CustomField>