force-app/main/default/objects/Student__c/recordTypes/Demo_student.recordType-meta.xml
<RecordType>
    <fullName>Demo_student</fullName>
    <active>true</active>
    <label>Demo student</label>
</RecordType>