force-app/main/default/objects/Student__c/recordTypes/Graduate_Student.recordType-meta.xml
<RecordType>
    <fullName>Graduate_Student</fullName>
    <active>true</active>
    <label>Graduate Student</label>
</RecordType>