force-app/main/default/objects/Student__c/validationRules/Percentage_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentage_Check</fullName>
    <active>true</active>
    <errorConditionFormula>X12th_Percentage__c  &lt; 0.60</errorConditionFormula>
    <errorDisplayField>X12th_Percentage__c</errorDisplayField>
    <errorMessage>Percentage below 60%. You are not eligible for registration</errorMessage>
</ValidationRule>